# release-notes-generator

./: .gitignore  README.md  config.yml  debug_tools.py  main.py  pyproject.toml  release-notes.md  requirements.txt
release_notes/: 2025-01-29-12-34-20_ga_0.0.2_keboola-ex-franconnect.md  2025-01-29-12-34-20_ga_0.0.3_keboola-ex-franconnect.md  2025-01-29-12-34-20_hidden_0.0.2_keboola-ex-franconnect.md  2025-01-29-12-34-20_hidden_0.0.3_keboola-ex-franconnect.md  2025-01-30-08-09-04_ga_0.0.4_keboola-ex-franconnect.md  2025-01-30-08-09-04_hidden_0.0.4_keboola-ex-franconnect.md  2025-01-30-08-14-57_ga_0.0.1_keboola-ex-adform-metadata.md  2025-01-30-08-14-57_hidden_0.0.1_keboola-ex-adform-metadata.md  2025-01-31-14-07-28_ga_1.4.6_kds-team-ex-salesforce-v2.md  2025-01-31-14-32-25_beta_0.5.1_kds-team-app-generative-ai.md  2025-02-03-13-41-05_experimental_0.0.10_kds-team-ex-heureka.md  2025-02-03-15-04-17_ga_0.0.2_keboola-ex-adform-metadata.md  2025-02-03-15-04-17_hidden_0.0.2_keboola-ex-adform-metadata.md  2025-02-04-13-48-53_ga_0.0.4_kds-team-ex-lever.md  2025-02-04-13-48-53_hidden_0.0.4_kds-team-ex-lever.md  2025-02-06-11-14-29_ga_0.6.2_kds-team-app-dev-prod-sync.md  2025-02-06-11-14-29_hidden_0.6.2_kds-team-app-dev-prod-sync.md  2025-02-10-07-27-54_alpha_0.0.5_keboola-ex-franconnect.md  2025-02-10-07-27-54_ga_0.0.5_keboola-ex-franconnect.md  2025-02-10-07-27-54_hidden_0.0.5_keboola-ex-franconnect.md  2025-02-10-07-27-54_private_0.0.5_keboola-ex-franconnect.md  2025-02-11-08-07-22_ga_1.4.7_kds-team-ex-salesforce-v2.md  2025-02-12-20-16-03_alpha_0.0.6_keboola-ex-franconnect.md  (+307 more)
(+13 files in other folders)
